[gd_scene load_steps=3 format=3 uid="uid://c3ekjjhiqy5iy"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_gmfm1"]
[ext_resource type="PackedScene" uid="uid://bnla5m7oa6rcr" path="res://scenes/card_slot.tscn" id="2_3wt2b"]

[node name="Game" type="Node"]
script = ExtResource("1_gmfm1")

[node name="CardSlot" parent="." instance=ExtResource("2_3wt2b")]

[connection signal="slot_highlighted" from="CardSlot" to="." method="_on_card_slot_highlighted"]
[connection signal="slot_unhighlighted" from="CardSlot" to="." method="_on_card_slot_unhighlighted"]
